--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
   setup-workflow:
     jobs:
       - path-filtering/filter:
-          base-revision: origin/master
+#           base-revision: origin/master
           config-path: .circleci/setup-workflow-config.yml
           mapping: |
             app1/.* app1 true
