--- a/app2/.circleci/config.yml
+++ b/app2/.circleci/config.yml
@@ -8,7 +8,7 @@ parameters:
 # See https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   job2:
-    docker: # executor type
+    docker: # executor typeeeeeeee
       - image: buildpack-deps:trusty # primary container will run Ubuntu Trusty
     steps:
       - run:
